# ALFA_Air_and_Land_Firefighting_Agents

./: README.md
Navigation/: README.md
Navigation/multiple_robots_stage/: README.md
Navigation/multiple_robots_stage/launch/: robots_in_stage.launch
Navigation/multiple_robots_stage/launch/includes/: single_robot.launch
Navigation/multiple_robots_stage/maps/: maze.yaml
Navigation/multiple_robots_stage/maps/stage/: robopark_plan.world
Navigation/multiple_robots_stage/rviz/: rviz_config.rviz
Navigation/multiple_robots_stage/scripts/: client_patrol_single.py  commander.py  navigator.py  patrol_organizer.py
Navigation/pathplanning_turtlebot_stage/: README.md  package.xml
Navigation/pathplanning_turtlebot_stage/cmake/: turtlebot_stageConfig.cmake
Navigation/pathplanning_turtlebot_stage/launch/: turtlebot_in_stage.launch
Navigation/pathplanning_turtlebot_stage/maps/stage/: maze.world
Navigation/pathplanning_turtlebot_stage/src/: navigator.py
